break inside avoid colums

--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,7 @@ body {
 .circleLink:hover {
   color: #7986cb;
 }
+
+.circle-info {
+  break-inside: avoid-column;
+}
